# TOODALOO

./: .gitignore  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg  terraform.tfstate  terraform.tfstate.backup  toodaloo.tf  userdata.sh
requirements/: developer.txt  production.txt
toodaloo/: urls.py  wsgi.py
toodaloo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
toodaloo/settings/: __init__.py  base.py  production.py
toodaloo/todo/: admin.py  apps.py  urls.py
toodaloo/todo/migrations/: 0001_initial.py
toodaloo/todo/templates/todo/: task_restore_form.html  task_update_form.html
